k8s/ vault/service.yaml
# k8s/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
  selector:
    app: vault
  type: ClusterIP
